--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2707,7 +2707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3911b2eb",
+   "id": "551df7e0",
    "metadata": {},
    "source": [
     "### Final Test"
@@ -2833,7 +2833,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "656315cd",
+   "id": "4503ea15",
    "metadata": {},
    "outputs": [
     {
@@ -2865,7 +2865,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "647edc5c",
+   "id": "572de160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2888,7 +2888,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "a31374da",
+   "id": "08897274",
    "metadata": {},
    "outputs": [
     {
@@ -2916,29 +2916,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "90f368c3",
+   "execution_count": 119,
+   "id": "7241f9b5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "27"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'hst_sales_fit3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[119], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m forecast \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msales_total\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mhst_sales_fit3\u001b[49m\u001b[38;5;241m.\u001b[39mforecast(validate\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m test\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m365\u001b[39m),\n\u001b[1;32m      2\u001b[0m                            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquantity\u001b[39m\u001b[38;5;124m'\u001b[39m: hst_quantity_fit3\u001b[38;5;241m.\u001b[39mforecast(validate\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m test\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m365\u001b[39m)})\n\u001b[1;32m      3\u001b[0m forecast \u001b[38;5;241m=\u001b[39m forecast[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2018\u001b[39m\u001b[38;5;124m'\u001b[39m:]\n\u001b[1;32m      4\u001b[0m forecast\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hst_sales_fit3' is not defined"
+     ]
     }
    ],
    "source": [
-    "len(test)"
+    "forecast = pd.DataFrame({'sales_total': hst_sales_fit3.forecast(validate.shape[0] + test.shape[0] + 1 + 365),\n",
+    "                           'quantity': hst_quantity_fit3.forecast(validate.shape[0] + test.shape[0] + 1 + 365)})\n",
+    "forecast = forecast['2018':]\n",
+    "forecast"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c603bcd1",
+   "id": "e11eec65",
    "metadata": {},
    "outputs": [
     {
@@ -2959,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1fcf80bf",
+   "id": "c2e2ffe8",
    "metadata": {},
    "outputs": [
     {
@@ -3147,7 +3151,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "6b25a24d",
+   "id": "ba3e8ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3157,7 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "f9fc0b08",
+   "id": "16981eea",
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1635388c",
+   "id": "7fe4f7ee",
    "metadata": {},
    "outputs": [],
    "source": []
