--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e6821c25",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952ca3d6",
+   "id": "f95f318c",
    "metadata": {},
    "source": [
     "# Airline Delay Predictions"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18803968",
+   "id": "b7a0427e",
    "metadata": {},
    "source": [
     "Source: https://aspm.faa.gov/aspmhelp/index/ASQP___Carrier_Codes_And_Names.html"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb92a7d7",
+   "id": "2f46e681",
    "metadata": {},
    "source": [
     "Source: https://www.kaggle.com/datasets/sherrytp/airline-delay-analysis"
@@ -81,194 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "eff6fe2c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>FL_DATE</th>\n",
-       "      <th>OP_CARRIER</th>\n",
-       "      <th>CARRIER_DELAY</th>\n",
-       "      <th>WEATHER_DELAY</th>\n",
-       "      <th>NAS_DELAY</th>\n",
-       "      <th>SECURITY_DELAY</th>\n",
-       "      <th>LATE_AIRCRAFT_DELAY</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3102</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3103</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3104</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3105</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3106</th>\n",
-       "      <td>2009-01-01</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7417301</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7417302</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7417303</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7417304</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7417305</th>\n",
-       "      <td>2019-12-31</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5452568 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            FL_DATE OP_CARRIER  CARRIER_DELAY  WEATHER_DELAY  NAS_DELAY  \\\n",
-       "3102     2009-01-01         UA            NaN            NaN        NaN   \n",
-       "3103     2009-01-01         UA            NaN            NaN        NaN   \n",
-       "3104     2009-01-01         UA            NaN            NaN        NaN   \n",
-       "3105     2009-01-01         UA            NaN            NaN        NaN   \n",
-       "3106     2009-01-01         UA            NaN            NaN        NaN   \n",
-       "...             ...        ...            ...            ...        ...   \n",
-       "7417301  2019-12-31         UA            NaN            NaN        NaN   \n",
-       "7417302  2019-12-31         UA            NaN            NaN        NaN   \n",
-       "7417303  2019-12-31         UA            NaN            NaN        NaN   \n",
-       "7417304  2019-12-31         UA            NaN            NaN        NaN   \n",
-       "7417305  2019-12-31         UA            NaN            NaN        NaN   \n",
-       "\n",
-       "         SECURITY_DELAY  LATE_AIRCRAFT_DELAY  \n",
-       "3102                NaN                  NaN  \n",
-       "3103                NaN                  NaN  \n",
-       "3104                NaN                  NaN  \n",
-       "3105                NaN                  NaN  \n",
-       "3106                NaN                  NaN  \n",
-       "...                 ...                  ...  \n",
-       "7417301             NaN                  NaN  \n",
-       "7417302             NaN                  NaN  \n",
-       "7417303             NaN                  NaN  \n",
-       "7417304             NaN                  NaN  \n",
-       "7417305             NaN                  NaN  \n",
-       "\n",
-       "[5452568 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5452568 entries, 3102 to 7417305\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column               Dtype  \n",
+      "---  ------               -----  \n",
+      " 0   FL_DATE              object \n",
+      " 1   OP_CARRIER           object \n",
+      " 2   CARRIER_DELAY        float64\n",
+      " 3   WEATHER_DELAY        float64\n",
+      " 4   NAS_DELAY            float64\n",
+      " 5   SECURITY_DELAY       float64\n",
+      " 6   LATE_AIRCRAFT_DELAY  float64\n",
+      "dtypes: float64(5), object(2)\n",
+      "memory usage: 332.8+ MB\n"
+     ]
     }
    ],
    "source": [
     "flights = wrangle.pull_airline_data('UA')\n",
-    "flights"
+    "flights.info()"
    ]
   },
   {
@@ -307,114 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3fbc6f6f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>average_delay</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FL_DATE</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2009-01-01</th>\n",
-       "      <td>9.676707</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009-01-02</th>\n",
-       "      <td>14.156364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009-01-03</th>\n",
-       "      <td>11.209040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009-01-04</th>\n",
-       "      <td>7.436530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009-01-05</th>\n",
-       "      <td>8.880218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-27</th>\n",
-       "      <td>7.031214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-28</th>\n",
-       "      <td>22.058198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-29</th>\n",
-       "      <td>19.964902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-30</th>\n",
-       "      <td>16.308449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-31</th>\n",
-       "      <td>6.195433</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4017 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            average_delay\n",
-       "FL_DATE                  \n",
-       "2009-01-01       9.676707\n",
-       "2009-01-02      14.156364\n",
-       "2009-01-03      11.209040\n",
-       "2009-01-04       7.436530\n",
-       "2009-01-05       8.880218\n",
-       "...                   ...\n",
-       "2019-12-27       7.031214\n",
-       "2019-12-28      22.058198\n",
-       "2019-12-29      19.964902\n",
-       "2019-12-30      16.308449\n",
-       "2019-12-31       6.195433\n",
-       "\n",
-       "[4017 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 4017 entries, 2009-01-01 to 2019-12-31\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   average_delay  4017 non-null   float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 62.8 KB\n"
+     ]
     }
    ],
    "source": [
     "flights_daily_mean = wrangle.clean_flight_data_for_average_daily_delay(flights)\n",
-    "flights_daily_mean"
+    "flights_daily_mean.info()"
    ]
   },
   {
@@ -730,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1ba5b8",
+   "id": "91f9ad0d",
    "metadata": {},
    "source": [
     "## Plot the split"
@@ -807,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d77f9ae",
+   "id": "ad0dc2a1",
    "metadata": {},
    "source": [
     "### Last Average"
@@ -890,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754ea0e3",
+   "id": "a76624a8",
    "metadata": {},
    "source": [
     "### Total Average"
@@ -980,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbfd510",
+   "id": "d335a293",
    "metadata": {},
    "source": [
     "### Rolling Average"
@@ -1096,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a9075a",
+   "id": "2f5b8aed",
    "metadata": {},
    "source": [
     "## Models"
@@ -1105,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "de3f4ad7",
+   "id": "f60b87a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff7b9652",
+   "id": "c77ae556",
    "metadata": {},
    "source": [
     "#### Best rmse: 3.74 minutes --- Delta: .55 minutes "
@@ -1543,7 +1297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3652296a",
+   "id": "e78362b5",
    "metadata": {},
    "source": [
     "## Conclusions\n",
@@ -1556,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6a0601",
+   "id": "ec9501b9",
    "metadata": {},
    "source": [
     "## Next steps"
@@ -1604,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4806b11",
+   "id": "7b365c93",
    "metadata": {},
    "source": [
     "### Carrier/Maintenance, NAS, Military/Airshow, Accident, Presidential, Natural Disaster all take a back seat to WEATHER!\n",
@@ -1620,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca2c8bd",
+   "id": "5af69ce0",
    "metadata": {},
    "outputs": [],
    "source": []
