--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "e6821c25",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "eff6fe2c",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "d7061920",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "3fbc6f6f",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "7dbe83ad",
    "metadata": {
     "scrolled": false
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "f2db60c8",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "dd2aa4ea",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "bd017e45",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "[209 rows x 1 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "6b2e9ea2",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "ea014ff4",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "ebd986e5",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "04b12519",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
        "0  last_observed_value  average_delay  9.38"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "id": "2a7e53aa",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "0  average_of_all_test_means  average_delay  4.38"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "1972861e",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
        "0  rolling_average_of_26_fortnights  average_delay  4.29"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "f60b87a2",
    "metadata": {},
    "outputs": [],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "id": "364a75b1",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        "0  holts_linear_trend  average_delay  5.98"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "id": "f9836956",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1030,7 @@
        "0      holts_seasonal  average_delay  3.74"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "2129f819",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
        "0    previous 2 years  average_delay  4.44"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,6 +1147,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db77bbee",
+   "metadata": {},
+   "source": [
+    "###  There seems to be no overfitting here the best model is Holt's Seasonal with Dampening"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "18f03e8a",
    "metadata": {},
    "source": [
@@ -1155,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "id": "3c9f70a5",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "id": "afeacdb4",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "id": "9903e126",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1293,7 @@
        "2020-03-01      13.234037"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1308,7 @@
    "id": "e78362b5",
    "metadata": {},
    "source": [
-    "## Conclusions\n",
+    "# Conclusions\n",
     "* There is a clear seasonality to the delays\n",
     "* Our rmse is just over a minute better than basline but really is not all that useful in and of itself\n",
     "* The seasonal trend IS useful and can inform expected delays given the time of the year\n",
@@ -1326,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "id": "22bb916b",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1345,7 @@
        "<Figure size 640x480 with 4 Axes>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1375,6 +1383,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5af69ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d44a990a",
    "metadata": {},
    "outputs": [],
    "source": []
